apps/envoy-gateway-config/overlays/freeloader/gateway-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
